permission and btn_add debug

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,8 +116,9 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="15dp"
             android:background="@drawable/plus"
-            android:onClick="Solution2C2"
+
             />
+//android:onClick="Solution2C2"
 
         <Button
             android:id="@+id/page_message"
