--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -4,7 +4,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="match_parent"
     android:layout_marginTop="3dp"
     android:layout_marginBottom="3dp">
 
@@ -12,7 +12,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="400dp"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <TextView
